SOURCES/ModelGenerator/LhaParser/Lha-parser.output
Terminals unused in grammar

   LhaName


Grammar

    0 $accept: LHA "end of file"

    1 LHA: declarations InitFinal definitions

    2 declarations: Sizes Constants Lists HaslExp
    3             | Sizes Lists HaslExp

    4 IntMarkingFormula: ival
    5                  | str
    6                  | LB IntMarkingFormula RB
    7                  | MINUS IntMarkingFormula
    8                  | IntMarkingFormula PLUS IntMarkingFormula
    9                  | IntMarkingFormula MINUS IntMarkingFormula
   10                  | IntMarkingFormula MUL IntMarkingFormula
   11                  | IntMarkingFormula POWER IntMarkingFormula
   12                  | FLOOR LB IntMarkingFormula RB
   13                  | FLOOR LB IntMarkingFormula DIV IntMarkingFormula RB
   14                  | MIN LB IntMarkingFormula COMMA IntMarkingFormula RB
   15                  | MAX LB IntMarkingFormula COMMA IntMarkingFormula RB

   16 RealMarkingFormula: rval
   17                   | ival
   18                   | str
   19                   | LB RealMarkingFormula RB
   20                   | MINUS RealMarkingFormula
   21                   | RealMarkingFormula DIV RealMarkingFormula
   22                   | RealMarkingFormula PLUS RealMarkingFormula
   23                   | RealMarkingFormula MINUS RealMarkingFormula
   24                   | RealMarkingFormula MUL RealMarkingFormula
   25                   | RealMarkingFormula POWER RealMarkingFormula
   26                   | FLOOR LB RealMarkingFormula RB
   27                   | MIN LB RealMarkingFormula COMMA RealMarkingFormula RB
   28                   | MAX LB RealMarkingFormula COMMA RealMarkingFormula RB

   29 RealVarMarkingFormula: rval
   30                      | ival
   31                      | str
   32                      | LB RealVarMarkingFormula RB
   33                      | MINUS RealVarMarkingFormula
   34                      | RealVarMarkingFormula DIV RealVarMarkingFormula
   35                      | RealVarMarkingFormula PLUS RealVarMarkingFormula
   36                      | RealVarMarkingFormula MINUS RealVarMarkingFormula
   37                      | RealVarMarkingFormula MUL RealVarMarkingFormula
   38                      | RealVarMarkingFormula POWER RealVarMarkingFormula
   39                      | FLOOR LB RealVarMarkingFormula RB
   40                      | MIN LB RealVarMarkingFormula COMMA RealVarMarkingFormula RB
   41                      | MAX LB RealVarMarkingFormula COMMA RealVarMarkingFormula RB

   42 Sizes: NbLocations NbVariables
   43      | NbVariables NbLocations

   44 Constants: Constant
   45          | Constant Constants

   46 Constant: Const INT str EQ IntMarkingFormula SEMICOLON
   47         | Const DOUBLE str EQ RealMarkingFormula SEMICOLON

   48 NbVariables: NbVar EQ ival SEMICOLON

   49 NbLocations: NbLoc EQ ival SEMICOLON

   50 Lists: VariablesList LocationsList
   51      | LocationsList VariablesList

   52 VariablesList: VList EQ '{' VLabels '}' SEMICOLON

   53 VLabels: str
   54        | VLabels COMMA str

   55 LocationsList: LList EQ '{' LLabels '}' SEMICOLON

   56 LLabels: str
   57        | LLabels COMMA str

   58 InitFinal: init final
   59          | final init

   60 init: Iloc EQ '{' iLLabels '}' SEMICOLON

   61 iLLabels: str
   62         | iLLabels COMMA str

   63 final: Floc EQ '{' fLLabels '}' SEMICOLON

   64 fLLabels: str
   65         | fLLabels COMMA str

   66 definitions: LocationsDef EdgesDef
   67            | EdgesDef LocationsDef

   68 LocationsDef: locations EQ '{' LOCATIONS '}' SEMICOLON

   69 LOCATIONS: LOCATION
   70          | LOCATIONS LOCATION

   71 LOCATION: LB str COMMA LogExpr COMMA LB FLOWS RB RB SEMICOLON
   72         | LB str COMMA LogExpr RB SEMICOLON

   73 FLOWS: FLOW
   74      | FLOWS COMMA FLOW

   75 FLOW: str COLON RealMarkingFormula

   76 LogExpr: TRUE
   77        | FALSE
   78        | CompExpr
   79        | LogExpr AND LogExpr
   80        | LogExpr OR LogExpr
   81        | LB LogExpr RB
   82        | NOT LogExpr

   83 CompExpr: RealMarkingFormula EQ RealMarkingFormula
   84         | RealMarkingFormula LEQ RealMarkingFormula
   85         | RealMarkingFormula GEQ RealMarkingFormula
   86         | RealMarkingFormula LL RealMarkingFormula
   87         | RealMarkingFormula GG RealMarkingFormula

   88 EdgesDef: edges EQ '{' EDGES '}' SEMICOLON

   89 EDGES: EDGE
   90      | EDGE EDGES

   91 EDGE: LB LB str COMMA str RB COMMA ACTIONS COMMA CONSTRAINTS COMMA UPDATES RB SEMICOLON

   92 ACTIONS: SHARP
   93        | ALL
   94        | ALL BackSlash SetOfActions
   95        | SetOfActions

   96 SetOfActions: '{' Actions '}'

   97 Actions: str
   98        | Actions COMMA str

   99 CONSTRAINTS: CONSTRAINT
  100            | CONSTRAINT AND CONSTRAINTS
  101            | SHARP

  102 CONSTRAINT: LinearExp EQ RealMarkingFormula
  103           | LinearExp LEQ RealMarkingFormula
  104           | LinearExp GEQ RealMarkingFormula

  105 LinearExp: term
  106          | LinearExp MINUS term
  107          | LinearExp PLUS term

  108 term: str
  109     | LB RealMarkingFormula RB MUL str
  110     | ival MUL str
  111     | rval MUL str
  112     | str MUL str
  113     | MINUS str
  114     | MINUS LB RealMarkingFormula RB MUL str
  115     | MINUS ival MUL str
  116     | MINUS rval MUL str
  117     | MINUS str MUL str

  118 UPDATES: '{' Updates '}'
  119        | SHARP

  120 Updates: Update
  121        | Updates COMMA Update

  122 Update: str EQ RealVarMarkingFormula

  123 HaslExp: AVG LB AlgExpr RB SEMICOLON

  124 AlgExpr: LhaFunc
  125        | MIN LB AlgExpr COMMA AlgExpr RB
  126        | MAX LB AlgExpr COMMA AlgExpr RB
  127        | MINUS AlgExpr
  128        | FLOOR LB AlgExpr RB
  129        | LB AlgExpr RB
  130        | AlgExpr POWER AlgExpr
  131        | AlgExpr PLUS AlgExpr
  132        | AlgExpr MINUS AlgExpr
  133        | AlgExpr MUL AlgExpr
  134        | AlgExpr DIV AlgExpr

  135 LhaFunc: LAST LB LinForm RB
  136        | LhaMIN LB LinForm RB
  137        | LhaMAX LB LinForm RB
  138        | INTEGRAL LB LinForm RB

  139 LinForm: VarTerm
  140        | LinForm MINUS VarTerm
  141        | LinForm PLUS VarTerm

  142 VarTerm: str
  143        | LB RealMarkingFormula RB MUL str
  144        | ival MUL str
  145        | rval MUL str
  146        | str MUL str
  147        | MINUS str
  148        | MINUS LB RealMarkingFormula RB MUL str
  149        | MINUS ival MUL str
  150        | MINUS rval MUL str
  151        | MINUS str MUL str


Terminals, with rules where they appear

"end of file" (0) 0
'{' (123) 52 55 60 63 68 88 96 118
'}' (125) 52 55 60 63 68 88 96 118
error (256)
str (258) 5 18 31 46 47 53 54 56 57 61 62 64 65 71 72 75 91 97 98 108
    109 110 111 112 113 114 115 116 117 122 142 143 144 145 146 147
    148 149 150 151
rval (259) 16 29 111 116 145 150
ival (260) 4 17 30 48 49 110 115 144 149
SEMICOLON (261) 46 47 48 49 52 55 60 63 68 71 72 88 91 123
COLON (262) 75
COMMA (263) 14 15 27 28 40 41 54 57 62 65 71 72 74 91 98 121 125 126
LB (264) 6 12 13 14 15 19 26 27 28 32 39 40 41 71 72 81 91 109 114
    123 125 126 128 129 135 136 137 138 143 148
RB (265) 6 12 13 14 15 19 26 27 28 32 39 40 41 71 72 81 91 109 114
    123 125 126 128 129 135 136 137 138 143 148
SHARP (266) 92 101 119
ALL (267) 93 94
BackSlash (268) 94
EQ (269) 46 47 48 49 52 55 60 63 68 83 88 102 122
GEQ (270) 85 104
LEQ (271) 84 103
LL (272) 86
GG (273) 87
AND (274) 79 100
OR (275) 80
NOT (276) 82
TRUE (277) 76
FALSE (278) 77
DOUBLE (279) 47
INT (280) 46
DIV (281) 13 21 34 134
MUL (282) 10 24 37 109 110 111 112 114 115 116 117 133 143 144 145
    146 148 149 150 151
PLUS (283) 8 22 35 107 131 141
MINUS (284) 7 9 20 23 33 36 106 113 114 115 116 117 127 132 140 147
    148 149 150 151
POWER (285) 11 25 38 130
FLOOR (286) 12 13 26 39 128
MIN (287) 14 27 40 125
MAX (288) 15 28 41 126
LhaMIN (289) 136
LhaMAX (290) 137
AVG (291) 123
LAST (292) 135
INTEGRAL (293) 138
LhaName (294)
Const (295) 46 47
NbLoc (296) 49
NbVar (297) 48
VList (298) 52
LList (299) 55
Iloc (300) 60
Floc (301) 63
locations (302) 68
edges (303) 88
NEG (304)


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
LHA (53)
    on left: 1, on right: 0
declarations (54)
    on left: 2 3, on right: 1
IntMarkingFormula (55)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15, on right: 6 7 8 9 10 11
    12 13 14 15 46
RealMarkingFormula (56)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28, on right: 19 20
    21 22 23 24 25 26 27 28 47 75 83 84 85 86 87 102 103 104 109 114
    143 148
RealVarMarkingFormula (57)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41, on right: 32 33
    34 35 36 37 38 39 40 41 122
Sizes (58)
    on left: 42 43, on right: 2 3
Constants (59)
    on left: 44 45, on right: 2 45
Constant (60)
    on left: 46 47, on right: 44 45
NbVariables (61)
    on left: 48, on right: 42 43
NbLocations (62)
    on left: 49, on right: 42 43
Lists (63)
    on left: 50 51, on right: 2 3
VariablesList (64)
    on left: 52, on right: 50 51
VLabels (65)
    on left: 53 54, on right: 52 54
LocationsList (66)
    on left: 55, on right: 50 51
LLabels (67)
    on left: 56 57, on right: 55 57
InitFinal (68)
    on left: 58 59, on right: 1
init (69)
    on left: 60, on right: 58 59
iLLabels (70)
    on left: 61 62, on right: 60 62
final (71)
    on left: 63, on right: 58 59
fLLabels (72)
    on left: 64 65, on right: 63 65
definitions (73)
    on left: 66 67, on right: 1
LocationsDef (74)
    on left: 68, on right: 66 67
LOCATIONS (75)
    on left: 69 70, on right: 68 70
LOCATION (76)
    on left: 71 72, on right: 69 70
FLOWS (77)
    on left: 73 74, on right: 71 74
FLOW (78)
    on left: 75, on right: 73 74
LogExpr (79)
    on left: 76 77 78 79 80 81 82, on right: 71 72 79 80 81 82
CompExpr (80)
    on left: 83 84 85 86 87, on right: 78
EdgesDef (81)
    on left: 88, on right: 66 67
EDGES (82)
    on left: 89 90, on right: 88 90
EDGE (83)
    on left: 91, on right: 89 90
ACTIONS (84)
    on left: 92 93 94 95, on right: 91
SetOfActions (85)
    on left: 96, on right: 94 95
Actions (86)
    on left: 97 98, on right: 96 98
CONSTRAINTS (87)
    on left: 99 100 101, on right: 91 100
CONSTRAINT (88)
    on left: 102 103 104, on right: 99 100
LinearExp (89)
    on left: 105 106 107, on right: 102 103 104 106 107
term (90)
    on left: 108 109 110 111 112 113 114 115 116 117, on right: 105
    106 107
UPDATES (91)
    on left: 118 119, on right: 91
Updates (92)
    on left: 120 121, on right: 118 121
Update (93)
    on left: 122, on right: 120 121
HaslExp (94)
    on left: 123, on right: 2 3
AlgExpr (95)
    on left: 124 125 126 127 128 129 130 131 132 133 134, on right:
    123 125 126 127 128 129 130 131 132 133 134
LhaFunc (96)
    on left: 135 136 137 138, on right: 124
LinForm (97)
    on left: 139 140 141, on right: 135 136 137 138 140 141
VarTerm (98)
    on left: 142 143 144 145 146 147 148 149 150 151, on right: 139
    140 141


state 0

    0 $accept: . LHA "end of file"

    NbLoc  shift, and go to state 1
    NbVar  shift, and go to state 2

    LHA           go to state 3
    declarations  go to state 4
    Sizes         go to state 5
    NbVariables   go to state 6
    NbLocations   go to state 7


state 1

   49 NbLocations: NbLoc . EQ ival SEMICOLON

    EQ  shift, and go to state 8


state 2

   48 NbVariables: NbVar . EQ ival SEMICOLON

    EQ  shift, and go to state 9


state 3

    0 $accept: LHA . "end of file"

    "end of file"  shift, and go to state 10


state 4

    1 LHA: declarations . InitFinal definitions

    Iloc  shift, and go to state 11
    Floc  shift, and go to state 12

    InitFinal  go to state 13
    init       go to state 14
    final      go to state 15


state 5

    2 declarations: Sizes . Constants Lists HaslExp
    3             | Sizes . Lists HaslExp

    Const  shift, and go to state 16
    VList  shift, and go to state 17
    LList  shift, and go to state 18

    Constants      go to state 19
    Constant       go to state 20
    Lists          go to state 21
    VariablesList  go to state 22
    LocationsList  go to state 23


state 6

   43 Sizes: NbVariables . NbLocations

    NbLoc  shift, and go to state 1

    NbLocations  go to state 24


state 7

   42 Sizes: NbLocations . NbVariables

    NbVar  shift, and go to state 2

    NbVariables  go to state 25


state 8

   49 NbLocations: NbLoc EQ . ival SEMICOLON

    ival  shift, and go to state 26


state 9

   48 NbVariables: NbVar EQ . ival SEMICOLON

    ival  shift, and go to state 27


state 10

    0 $accept: LHA "end of file" .

    $default  accept


state 11

   60 init: Iloc . EQ '{' iLLabels '}' SEMICOLON

    EQ  shift, and go to state 28


state 12

   63 final: Floc . EQ '{' fLLabels '}' SEMICOLON

    EQ  shift, and go to state 29


state 13

    1 LHA: declarations InitFinal . definitions

    locations  shift, and go to state 30
    edges      shift, and go to state 31

    definitions   go to state 32
    LocationsDef  go to state 33
    EdgesDef      go to state 34


state 14

   58 InitFinal: init . final

    Floc  shift, and go to state 12

    final  go to state 35


state 15

   59 InitFinal: final . init

    Iloc  shift, and go to state 11

    init  go to state 36


state 16

   46 Constant: Const . INT str EQ IntMarkingFormula SEMICOLON
   47         | Const . DOUBLE str EQ RealMarkingFormula SEMICOLON

    DOUBLE  shift, and go to state 37
    INT     shift, and go to state 38


state 17

   52 VariablesList: VList . EQ '{' VLabels '}' SEMICOLON

    EQ  shift, and go to state 39


state 18

   55 LocationsList: LList . EQ '{' LLabels '}' SEMICOLON

    EQ  shift, and go to state 40


state 19

    2 declarations: Sizes Constants . Lists HaslExp

    VList  shift, and go to state 17
    LList  shift, and go to state 18

    Lists          go to state 41
    VariablesList  go to state 22
    LocationsList  go to state 23


state 20

   44 Constants: Constant .
   45          | Constant . Constants

    Const  shift, and go to state 16

    $default  reduce using rule 44 (Constants)

    Constants  go to state 42
    Constant   go to state 20


state 21

    3 declarations: Sizes Lists . HaslExp

    AVG  shift, and go to state 43

    HaslExp  go to state 44


state 22

   50 Lists: VariablesList . LocationsList

    LList  shift, and go to state 18

    LocationsList  go to state 45


state 23

   51 Lists: LocationsList . VariablesList

    VList  shift, and go to state 17

    VariablesList  go to state 46


state 24

   43 Sizes: NbVariables NbLocations .

    $default  reduce using rule 43 (Sizes)


state 25

   42 Sizes: NbLocations NbVariables .

    $default  reduce using rule 42 (Sizes)


state 26

   49 NbLocations: NbLoc EQ ival . SEMICOLON

    SEMICOLON  shift, and go to state 47


state 27

   48 NbVariables: NbVar EQ ival . SEMICOLON

    SEMICOLON  shift, and go to state 48


state 28

   60 init: Iloc EQ . '{' iLLabels '}' SEMICOLON

    '{'  shift, and go to state 49


state 29

   63 final: Floc EQ . '{' fLLabels '}' SEMICOLON

    '{'  shift, and go to state 50


state 30

   68 LocationsDef: locations . EQ '{' LOCATIONS '}' SEMICOLON

    EQ  shift, and go to state 51


state 31

   88 EdgesDef: edges . EQ '{' EDGES '}' SEMICOLON

    EQ  shift, and go to state 52


state 32

    1 LHA: declarations InitFinal definitions .

    $default  reduce using rule 1 (LHA)


state 33

   66 definitions: LocationsDef . EdgesDef

    edges  shift, and go to state 31

    EdgesDef  go to state 53


state 34

   67 definitions: EdgesDef . LocationsDef

    locations  shift, and go to state 30

    LocationsDef  go to state 54


state 35

   58 InitFinal: init final .

    $default  reduce using rule 58 (InitFinal)


state 36

   59 InitFinal: final init .

    $default  reduce using rule 59 (InitFinal)


state 37

   47 Constant: Const DOUBLE . str EQ RealMarkingFormula SEMICOLON

    str  shift, and go to state 55


state 38

   46 Constant: Const INT . str EQ IntMarkingFormula SEMICOLON

    str  shift, and go to state 56


state 39

   52 VariablesList: VList EQ . '{' VLabels '}' SEMICOLON

    '{'  shift, and go to state 57


state 40

   55 LocationsList: LList EQ . '{' LLabels '}' SEMICOLON

    '{'  shift, and go to state 58


state 41

    2 declarations: Sizes Constants Lists . HaslExp

    AVG  shift, and go to state 43

    HaslExp  go to state 59


state 42

   45 Constants: Constant Constants .

    $default  reduce using rule 45 (Constants)


state 43

  123 HaslExp: AVG . LB AlgExpr RB SEMICOLON

    LB  shift, and go to state 60


state 44

    3 declarations: Sizes Lists HaslExp .

    $default  reduce using rule 3 (declarations)


state 45

   50 Lists: VariablesList LocationsList .

    $default  reduce using rule 50 (Lists)


state 46

   51 Lists: LocationsList VariablesList .

    $default  reduce using rule 51 (Lists)


state 47

   49 NbLocations: NbLoc EQ ival SEMICOLON .

    $default  reduce using rule 49 (NbLocations)


state 48

   48 NbVariables: NbVar EQ ival SEMICOLON .

    $default  reduce using rule 48 (NbVariables)


state 49

   60 init: Iloc EQ '{' . iLLabels '}' SEMICOLON

    str  shift, and go to state 61

    iLLabels  go to state 62


state 50

   63 final: Floc EQ '{' . fLLabels '}' SEMICOLON

    str  shift, and go to state 63

    fLLabels  go to state 64


state 51

   68 LocationsDef: locations EQ . '{' LOCATIONS '}' SEMICOLON

    '{'  shift, and go to state 65


state 52

   88 EdgesDef: edges EQ . '{' EDGES '}' SEMICOLON

    '{'  shift, and go to state 66


state 53

   66 definitions: LocationsDef EdgesDef .

    $default  reduce using rule 66 (definitions)


state 54

   67 definitions: EdgesDef LocationsDef .

    $default  reduce using rule 67 (definitions)


state 55

   47 Constant: Const DOUBLE str . EQ RealMarkingFormula SEMICOLON

    EQ  shift, and go to state 67


state 56

   46 Constant: Const INT str . EQ IntMarkingFormula SEMICOLON

    EQ  shift, and go to state 68


state 57

   52 VariablesList: VList EQ '{' . VLabels '}' SEMICOLON

    str  shift, and go to state 69

    VLabels  go to state 70


state 58

   55 LocationsList: LList EQ '{' . LLabels '}' SEMICOLON

    str  shift, and go to state 71

    LLabels  go to state 72


state 59

    2 declarations: Sizes Constants Lists HaslExp .

    $default  reduce using rule 2 (declarations)


state 60

  123 HaslExp: AVG LB . AlgExpr RB SEMICOLON

    LB        shift, and go to state 73
    MINUS     shift, and go to state 74
    FLOOR     shift, and go to state 75
    MIN       shift, and go to state 76
    MAX       shift, and go to state 77
    LhaMIN    shift, and go to state 78
    LhaMAX    shift, and go to state 79
    LAST      shift, and go to state 80
    INTEGRAL  shift, and go to state 81

    AlgExpr  go to state 82
    LhaFunc  go to state 83


state 61

   61 iLLabels: str .

    $default  reduce using rule 61 (iLLabels)


state 62

   60 init: Iloc EQ '{' iLLabels . '}' SEMICOLON
   62 iLLabels: iLLabels . COMMA str

    COMMA  shift, and go to state 84
    '}'    shift, and go to state 85


state 63

   64 fLLabels: str .

    $default  reduce using rule 64 (fLLabels)


state 64

   63 final: Floc EQ '{' fLLabels . '}' SEMICOLON
   65 fLLabels: fLLabels . COMMA str

    COMMA  shift, and go to state 86
    '}'    shift, and go to state 87


state 65

   68 LocationsDef: locations EQ '{' . LOCATIONS '}' SEMICOLON

    LB  shift, and go to state 88

    LOCATIONS  go to state 89
    LOCATION   go to state 90


state 66

   88 EdgesDef: edges EQ '{' . EDGES '}' SEMICOLON

    LB  shift, and go to state 91

    EDGES  go to state 92
    EDGE   go to state 93


state 67

   47 Constant: Const DOUBLE str EQ . RealMarkingFormula SEMICOLON

    str    shift, and go to state 94
    rval   shift, and go to state 95
    ival   shift, and go to state 96
    LB     shift, and go to state 97
    MINUS  shift, and go to state 98
    FLOOR  shift, and go to state 99
    MIN    shift, and go to state 100
    MAX    shift, and go to state 101

    RealMarkingFormula  go to state 102


state 68

   46 Constant: Const INT str EQ . IntMarkingFormula SEMICOLON

    str    shift, and go to state 103
    ival   shift, and go to state 104
    LB     shift, and go to state 105
    MINUS  shift, and go to state 106
    FLOOR  shift, and go to state 107
    MIN    shift, and go to state 108
    MAX    shift, and go to state 109

    IntMarkingFormula  go to state 110


state 69

   53 VLabels: str .

    $default  reduce using rule 53 (VLabels)


state 70

   52 VariablesList: VList EQ '{' VLabels . '}' SEMICOLON
   54 VLabels: VLabels . COMMA str

    COMMA  shift, and go to state 111
    '}'    shift, and go to state 112


state 71

   56 LLabels: str .

    $default  reduce using rule 56 (LLabels)


state 72

   55 LocationsList: LList EQ '{' LLabels . '}' SEMICOLON
   57 LLabels: LLabels . COMMA str

    COMMA  shift, and go to state 113
    '}'    shift, and go to state 114


state 73

  129 AlgExpr: LB . AlgExpr RB

    LB        shift, and go to state 73
    MINUS     shift, and go to state 74
    FLOOR     shift, and go to state 75
    MIN       shift, and go to state 76
    MAX       shift, and go to state 77
    LhaMIN    shift, and go to state 78
    LhaMAX    shift, and go to state 79
    LAST      shift, and go to state 80
    INTEGRAL  shift, and go to state 81

    AlgExpr  go to state 115
    LhaFunc  go to state 83


state 74

  127 AlgExpr: MINUS . AlgExpr

    LB        shift, and go to state 73
    MINUS     shift, and go to state 74
    FLOOR     shift, and go to state 75
    MIN       shift, and go to state 76
    MAX       shift, and go to state 77
    LhaMIN    shift, and go to state 78
    LhaMAX    shift, and go to state 79
    LAST      shift, and go to state 80
    INTEGRAL  shift, and go to state 81

    AlgExpr  go to state 116
    LhaFunc  go to state 83


state 75

  128 AlgExpr: FLOOR . LB AlgExpr RB

    LB  shift, and go to state 117


state 76

  125 AlgExpr: MIN . LB AlgExpr COMMA AlgExpr RB

    LB  shift, and go to state 118


state 77

  126 AlgExpr: MAX . LB AlgExpr COMMA AlgExpr RB

    LB  shift, and go to state 119


state 78

  136 LhaFunc: LhaMIN . LB LinForm RB

    LB  shift, and go to state 120


state 79

  137 LhaFunc: LhaMAX . LB LinForm RB

    LB  shift, and go to state 121


state 80

  135 LhaFunc: LAST . LB LinForm RB

    LB  shift, and go to state 122


state 81

  138 LhaFunc: INTEGRAL . LB LinForm RB

    LB  shift, and go to state 123


state 82

  123 HaslExp: AVG LB AlgExpr . RB SEMICOLON
  130 AlgExpr: AlgExpr . POWER AlgExpr
  131        | AlgExpr . PLUS AlgExpr
  132        | AlgExpr . MINUS AlgExpr
  133        | AlgExpr . MUL AlgExpr
  134        | AlgExpr . DIV AlgExpr

    RB     shift, and go to state 124
    DIV    shift, and go to state 125
    MUL    shift, and go to state 126
    PLUS   shift, and go to state 127
    MINUS  shift, and go to state 128
    POWER  shift, and go to state 129


state 83

  124 AlgExpr: LhaFunc .

    $default  reduce using rule 124 (AlgExpr)


state 84

   62 iLLabels: iLLabels COMMA . str

    str  shift, and go to state 130


state 85

   60 init: Iloc EQ '{' iLLabels '}' . SEMICOLON

    SEMICOLON  shift, and go to state 131


state 86

   65 fLLabels: fLLabels COMMA . str

    str  shift, and go to state 132


state 87

   63 final: Floc EQ '{' fLLabels '}' . SEMICOLON

    SEMICOLON  shift, and go to state 133


state 88

   71 LOCATION: LB . str COMMA LogExpr COMMA LB FLOWS RB RB SEMICOLON
   72         | LB . str COMMA LogExpr RB SEMICOLON

    str  shift, and go to state 134


state 89

   68 LocationsDef: locations EQ '{' LOCATIONS . '}' SEMICOLON
   70 LOCATIONS: LOCATIONS . LOCATION

    LB   shift, and go to state 88
    '}'  shift, and go to state 135

    LOCATION  go to state 136


state 90

   69 LOCATIONS: LOCATION .

    $default  reduce using rule 69 (LOCATIONS)


state 91

   91 EDGE: LB . LB str COMMA str RB COMMA ACTIONS COMMA CONSTRAINTS COMMA UPDATES RB SEMICOLON

    LB  shift, and go to state 137


state 92

   88 EdgesDef: edges EQ '{' EDGES . '}' SEMICOLON

    '}'  shift, and go to state 138


state 93

   89 EDGES: EDGE .
   90      | EDGE . EDGES

    LB  shift, and go to state 91

    $default  reduce using rule 89 (EDGES)

    EDGES  go to state 139
    EDGE   go to state 93


state 94

   18 RealMarkingFormula: str .

    $default  reduce using rule 18 (RealMarkingFormula)


state 95

   16 RealMarkingFormula: rval .

    $default  reduce using rule 16 (RealMarkingFormula)


state 96

   17 RealMarkingFormula: ival .

    $default  reduce using rule 17 (RealMarkingFormula)


state 97

   19 RealMarkingFormula: LB . RealMarkingFormula RB

    str    shift, and go to state 94
    rval   shift, and go to state 95
    ival   shift, and go to state 96
    LB     shift, and go to state 97
    MINUS  shift, and go to state 98
    FLOOR  shift, and go to state 99
    MIN    shift, and go to state 100
    MAX    shift, and go to state 101

    RealMarkingFormula  go to state 140


state 98

   20 RealMarkingFormula: MINUS . RealMarkingFormula

    str    shift, and go to state 94
    rval   shift, and go to state 95
    ival   shift, and go to state 96
    LB     shift, and go to state 97
    MINUS  shift, and go to state 98
    FLOOR  shift, and go to state 99
    MIN    shift, and go to state 100
    MAX    shift, and go to state 101

    RealMarkingFormula  go to state 141


state 99

   26 RealMarkingFormula: FLOOR . LB RealMarkingFormula RB

    LB  shift, and go to state 142


state 100

   27 RealMarkingFormula: MIN . LB RealMarkingFormula COMMA RealMarkingFormula RB

    LB  shift, and go to state 143


state 101

   28 RealMarkingFormula: MAX . LB RealMarkingFormula COMMA RealMarkingFormula RB

    LB  shift, and go to state 144


state 102

   21 RealMarkingFormula: RealMarkingFormula . DIV RealMarkingFormula
   22                   | RealMarkingFormula . PLUS RealMarkingFormula
   23                   | RealMarkingFormula . MINUS RealMarkingFormula
   24                   | RealMarkingFormula . MUL RealMarkingFormula
   25                   | RealMarkingFormula . POWER RealMarkingFormula
   47 Constant: Const DOUBLE str EQ RealMarkingFormula . SEMICOLON

    SEMICOLON  shift, and go to state 145
    DIV        shift, and go to state 146
    MUL        shift, and go to state 147
    PLUS       shift, and go to state 148
    MINUS      shift, and go to state 149
    POWER      shift, and go to state 150


state 103

    5 IntMarkingFormula: str .

    $default  reduce using rule 5 (IntMarkingFormula)


state 104

    4 IntMarkingFormula: ival .

    $default  reduce using rule 4 (IntMarkingFormula)


state 105

    6 IntMarkingFormula: LB . IntMarkingFormula RB

    str    shift, and go to state 103
    ival   shift, and go to state 104
    LB     shift, and go to state 105
    MINUS  shift, and go to state 106
    FLOOR  shift, and go to state 107
    MIN    shift, and go to state 108
    MAX    shift, and go to state 109

    IntMarkingFormula  go to state 151


state 106

    7 IntMarkingFormula: MINUS . IntMarkingFormula

    str    shift, and go to state 103
    ival   shift, and go to state 104
    LB     shift, and go to state 105
    MINUS  shift, and go to state 106
    FLOOR  shift, and go to state 107
    MIN    shift, and go to state 108
    MAX    shift, and go to state 109

    IntMarkingFormula  go to state 152


state 107

   12 IntMarkingFormula: FLOOR . LB IntMarkingFormula RB
   13                  | FLOOR . LB IntMarkingFormula DIV IntMarkingFormula RB

    LB  shift, and go to state 153


state 108

   14 IntMarkingFormula: MIN . LB IntMarkingFormula COMMA IntMarkingFormula RB

    LB  shift, and go to state 154


state 109

   15 IntMarkingFormula: MAX . LB IntMarkingFormula COMMA IntMarkingFormula RB

    LB  shift, and go to state 155


state 110

    8 IntMarkingFormula: IntMarkingFormula . PLUS IntMarkingFormula
    9                  | IntMarkingFormula . MINUS IntMarkingFormula
   10                  | IntMarkingFormula . MUL IntMarkingFormula
   11                  | IntMarkingFormula . POWER IntMarkingFormula
   46 Constant: Const INT str EQ IntMarkingFormula . SEMICOLON

    SEMICOLON  shift, and go to state 156
    MUL        shift, and go to state 157
    PLUS       shift, and go to state 158
    MINUS      shift, and go to state 159
    POWER      shift, and go to state 160


state 111

   54 VLabels: VLabels COMMA . str

    str  shift, and go to state 161


state 112

   52 VariablesList: VList EQ '{' VLabels '}' . SEMICOLON

    SEMICOLON  shift, and go to state 162


state 113

   57 LLabels: LLabels COMMA . str

    str  shift, and go to state 163


state 114

   55 LocationsList: LList EQ '{' LLabels '}' . SEMICOLON

    SEMICOLON  shift, and go to state 164


state 115

  129 AlgExpr: LB AlgExpr . RB
  130        | AlgExpr . POWER AlgExpr
  131        | AlgExpr . PLUS AlgExpr
  132        | AlgExpr . MINUS AlgExpr
  133        | AlgExpr . MUL AlgExpr
  134        | AlgExpr . DIV AlgExpr

    RB     shift, and go to state 165
    DIV    shift, and go to state 125
    MUL    shift, and go to state 126
    PLUS   shift, and go to state 127
    MINUS  shift, and go to state 128
    POWER  shift, and go to state 129


state 116

  127 AlgExpr: MINUS AlgExpr .
  130        | AlgExpr . POWER AlgExpr
  131        | AlgExpr . PLUS AlgExpr
  132        | AlgExpr . MINUS AlgExpr
  133        | AlgExpr . MUL AlgExpr
  134        | AlgExpr . DIV AlgExpr

    DIV    shift, and go to state 125
    MUL    shift, and go to state 126
    POWER  shift, and go to state 129

    $default  reduce using rule 127 (AlgExpr)


state 117

  128 AlgExpr: FLOOR LB . AlgExpr RB

    LB        shift, and go to state 73
    MINUS     shift, and go to state 74
    FLOOR     shift, and go to state 75
    MIN       shift, and go to state 76
    MAX       shift, and go to state 77
    LhaMIN    shift, and go to state 78
    LhaMAX    shift, and go to state 79
    LAST      shift, and go to state 80
    INTEGRAL  shift, and go to state 81

    AlgExpr  go to state 166
    LhaFunc  go to state 83


state 118

  125 AlgExpr: MIN LB . AlgExpr COMMA AlgExpr RB

    LB        shift, and go to state 73
    MINUS     shift, and go to state 74
    FLOOR     shift, and go to state 75
    MIN       shift, and go to state 76
    MAX       shift, and go to state 77
    LhaMIN    shift, and go to state 78
    LhaMAX    shift, and go to state 79
    LAST      shift, and go to state 80
    INTEGRAL  shift, and go to state 81

    AlgExpr  go to state 167
    LhaFunc  go to state 83


state 119

  126 AlgExpr: MAX LB . AlgExpr COMMA AlgExpr RB

    LB        shift, and go to state 73
    MINUS     shift, and go to state 74
    FLOOR     shift, and go to state 75
    MIN       shift, and go to state 76
    MAX       shift, and go to state 77
    LhaMIN    shift, and go to state 78
    LhaMAX    shift, and go to state 79
    LAST      shift, and go to state 80
    INTEGRAL  shift, and go to state 81

    AlgExpr  go to state 168
    LhaFunc  go to state 83


state 120

  136 LhaFunc: LhaMIN LB . LinForm RB

    str    shift, and go to state 169
    rval   shift, and go to state 170
    ival   shift, and go to state 171
    LB     shift, and go to state 172
    MINUS  shift, and go to state 173

    LinForm  go to state 174
    VarTerm  go to state 175


state 121

  137 LhaFunc: LhaMAX LB . LinForm RB

    str    shift, and go to state 169
    rval   shift, and go to state 170
    ival   shift, and go to state 171
    LB     shift, and go to state 172
    MINUS  shift, and go to state 173

    LinForm  go to state 176
    VarTerm  go to state 175


state 122

  135 LhaFunc: LAST LB . LinForm RB
